[project]
name = "sgblur"
description = "Blurring API"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]

dependencies = [
    "ultralytics==8.3.39",
    "pyturbojpeg==1.7.7",
    "Pillow-simd==9.0.0.post1",
    "uuid==1.30",
    "exifread==3.0.0",
    "python-multipart==0.0.19",
    "fastapi==0.115.5",
    "uvicorn==0.32.1",
    "requests==2.32.3",
    "pydantic-settings>=2.8.1",
    "pydantic>=2.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "httpx>=0.28.1",
    "ruff>=0.11.3",
    "requests-mock>=1.12.1",
    "multipart>=1.2.1",
]

[tool.ruff]
line-length = 140
