[project]
name = "sgblur"
description = "Blurring API"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version"]

dependencies = [
    "ultralytics==8.3.121",
    "pyturbojpeg==1.7.7",
    "Pillow==11.1.0",
    "uuid==1.30",
    "exifread==3.0.0",
    "python-multipart==0.0.20",
    "fastapi==0.115.11",
    "uvicorn==0.34.0",
    "requests==2.32.3",
    "piexif==1.1.3",
    "pydantic-settings==2.8.1",
    "pydantic==2.11.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "httpx>=0.28.1",
    "ruff>=0.11.3",
    "requests-mock>=1.12.1",
    "multipart>=1.2.1",
]

[tool.ruff]
line-length = 140
